Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11339

[Windows] {UPR}: View fragmentation is not increasing from 1, causing test to hang

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • view-engine
    • Security Level: Public
    • None
    • Build 3.0.0-771
      Windows-2012 (64 bit)
    • Untriaged
    • Windows 64-bit
    • Unknown

    Description

      [Jenkins]
      http://qa.sc.couchbase.com/job/win_2012_x64--105_01--uniXDCR_biXDCR-P0/6/consoleFull

      [Test]
      ./testrunner i win_2012_x64105_01-uniXDCR_biXDCR-P0.ini get-cbcollect-info=True,get-logs=False,stop-on-failure=False -t xdcr.biXDCR.bidirectional.replication_with_ddoc_compaction,items=20000,rdirection=bidirection,GROUP=P0

      Test was running from last 24-26 hours. I have aborted the tests. Live cluster is available for diagnose.

      [global]
      username:Administrator
      password:Membase123
      port:8091

      [cluster1]
      1:_1
      2:_2

      [cluster2]
      1:_3
      2:_4

      [servers]
      1:_1
      2:_2
      3:_3
      4:_4

      [_1]
      ip:172.23.107.28

      [_2]
      ip:172.23.107.29

      [_3]
      ip:172.23.107.30

      [_4]
      ip:172.23.107.31

      [membase]
      rest_username:Administrator
      rest_password:password

      [Test logs]

      [2014-06-05 22:33:46,787] - [task:2009] INFO - dev_ddoc1: current amount of fragmentation = 1
      [2014-06-05 22:33:46,800] - [rest_client:481] INFO - index query url: http://172.23.107.30:8092/default/_design/dev_ddoc1/_view/default3?full_set=true&stale=false

      [2014-06-05 22:33:47,878] - [rest_client:481] INFO - index query url: http://172.23.107.28:8092/default/_design/dev_ddoc1/_view/default4?full_set=true&stale=false

      [2014-06-05 22:33:50,062] - [task:2009] INFO - dev_ddoc1: current amount of fragmentation = 1
      [2014-06-05 22:33:50,073] - [rest_client:481] INFO - index query url: http://172.23.107.30:8092/default/_design/dev_ddoc1/_view/default4?full_set=true&stale=false
      [2014-06-05 22:33:51,315] - [data_helper:289] INFO - creating direct client 172.23.107.28:11210 default

      [2014-06-05 22:33:51,448] - [data_helper:289] INFO - creating direct client 172.23.107.29:11210 default

      [2014-06-05 22:33:53,294] - [task:2009] INFO - dev_ddoc1: current amount of fragmentation = 1
      [2014-06-05 22:33:53,295] - [task:745] INFO - Batch update documents done #: 0 with exp:0

      [2014-06-05 22:33:54,684] - [task:745] INFO - Batch update documents done #: 6000 with exp:0

      [2014-06-05 22:33:56,575] - [task:2009] INFO - dev_ddoc1: current amount of fragmentation = 1
      [2014-06-05 22:33:56,584] - [rest_client:481] INFO - index query url: http://172.23.107.28:8092/default/_design/dev_ddoc1/_view/default0?full_set=true&stale=false

      [2014-06-05 22:33:57,344] - [rest_client:481] INFO - index query url: http://172.23.107.30:8092/default/_design/dev_ddoc1/_view/default0?full_set=true&stale=false

      [2014-06-05 22:34:00,236] - [task:2009] INFO - dev_ddoc1: current amount of fragmentation = 1
      [2014-06-05 22:34:00,249] - [rest_client:481] INFO - index query url: http://172.23.107.28:8092/default/_design/dev_ddoc1/_view/default1?full_set=true&stale=false

      [2014-06-05 22:34:01,872] - [rest_client:481] INFO - index query url: http://172.23.107.30:8092/default/_design/dev_ddoc1/_view/default1?full_set=true&stale=false

      [2014-06-05 22:34:03,671] - [task:2009] INFO - dev_ddoc1: current amount of fragmentation = 1
      [2014-06-05 22:34:03,681] - [rest_client:481] INFO - index query url: http://172.23.107.28:8092/default/_design/dev_ddoc1/_view/default2?full_set=true&stale=false

      [2014-06-05 22:34:05,410] - [rest_client:481] INFO - index query url: http://172.23.107.30:8092/default/_design/dev_ddoc1/_view/default2?full_set=true&stale=false

      [Test Steps]
      1. Create 2-2 node Source and Destination cluster.
      2. Setup CAPI mode bidirectional xdcr source <---> destination for default bucket.
      3. Load 20K items on each cluster.
      4. Create 5 views:- default0, default1, default2, default3, defaul4 and development design doc: dev_ddoc1.
      5. Disable compaction.
      6. Keep on update 30% items on Source (i.e. 6000) and query on each view (on source and destination both) until View fragmentation on Source node is achieved to 80. -> Failed here. fragmentation is 1 for last 20-24 hours.

      Approximately 5232 updates were performed on 6000 items in last 20-24 hours.

      Source Nodes: 172.23.107.28 and 172.23.107.29
      Destination Nodes: 172.23.107.30, 172.23.107.31

      Cluster is live for investigation.

      Attachments

        For Gerrit Dashboard: MB-11339
        # Subject Branch Project Status CR V

        Activity

          People

            sangharsh Sangharsh Agarwal
            sangharsh Sangharsh Agarwal
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty