MB-11385, MB-11327, MB-11339 Disable buffering of stdout

C executables that manipulate btrees are to be set in
non buffered mode. This ensures that messages sent from
C world are received by processes in erlang world.
This fixes above mentioned bugs on Windows.

It is noticed on Windows platform that if data written
to stdout (or any file stream) is less than stdout buffer
size, it is not auto-flushed even when the program exits
successfully. Hence stdout reader from the erlang side like
view compactor, view index updater etc... will wait for fixed
bytes index header to arrive through stdout pipe indefinitely.

Change-Id: Ia9233781eaab44bb988bead0f4cc2b46ad9e6772
Reviewed-on: http://review.couchbase.org/39301
Reviewed-by: Sarath Lakshman <sarath@couchbase.com>
Reviewed-by: Volker Mische <volker.mische@gmail.com>
Tested-by: buildbot <build@couchbase.com>